# MuscleMemoryTrainer

./: .gitignore  README.md  mmt_app.spec  pyproject.toml
.github/workflows/: release.yml
src/mmt_app/: __init__.py  app.py  config.py  embedded_sound.py  main.py  static_brake.py  telemetry.py  trail_brake.py
src/mmt_app/input/: __init__.py  axis_calibrator.py  calibration.py  device_mgr.py  device_presets.py  hid_backend.py
src/mmt_app/resources/: app.qrc  app_rc.py
src/mmt_app/resources/styles/: theme.qss
src/mmt_app/ui/: __init__.py  about_tab.py  active_brake_tab.py  calibration_settings.py  device_selector.py  display_settings.py  input_setup_wizard.py  main_window.py  pedals_calibration_wizard.py  settings_tab.py  sound_manager.py  sound_settings.py  static_brake_tab.py  steering_calibration_wizard.py  telemetry_chart.py  telemetry_tab.py  threshold_training_tab.py  trail_brake_tab.py  utils.py  watermark_chart_view.py
tests/: test_calibration.py  test_config.py  test_hid_backend.py  test_smoke.py  test_static_brake.py  test_telemetry.py  test_threshold_training.py  test_trail_brake.py  test_utils.py
