[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "muscle-memory-trainer"
version = "1.2.0"
description = "Muscle Memory Trainer - PySide6 desktop app."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
    "PySide6>=6.7",
    "hidapi>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pyinstaller>=6.6",
]

[project.scripts]
mmt-app = "mmt_app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mmt_app"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]
